# jnigen_benchmark

./: .gitignore  .metadata  README.md  jnigen.yaml  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/java/com/example/batterylevel/: BatteryUtils.java  MainActivity.java
ios/Runner.xcodeproj/: project.pbxproj
lib/: battery_utils.dart  main.dart
src/: CMakeLists.txt
src/battery_utils/: battery_utils.c
